# python-project-52

./: .env.sample  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml  tests.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label.yaml  status.yaml  task.yaml  task_test_data.json  user.yaml  user_test_data.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at.py  0003_alter_label_created_at.py  0004_alter_label_created_at.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_statuses_created_at.py  0003_alter_statuses_name.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_description_alter_tasks_executor_and_more.py  0003_alter_tasks_executor.py  0004_tasks_labels_alter_tasks_creator.py  0005_alter_tasks_executor.py  0006_tasks_created_at.py  0007_taskslabels.py  0008_alter_tasks_labels.py  0009_alter_tasks_executor.py  0010_alter_tasks_executor.py  0011_alter_tasks_description_alter_tasks_executor_and_more.py  (+2 more)
task_manager/templates/: base copy.html  base.html  confirm_delete.html  footer.html  form.html  index copy.html  index.html  navigation copy.html
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+16 files in other folders)
