[tool.poetry]
name = "hexlet-code"
version = "0"
description = ""
authors = ["notsoyoung2 <p.sergey1997@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
